# tonic-template

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
proto/: simple.proto
src/: client.rs  lib.rs  main.rs  server.rs
