[package]
name = "tokio-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.1.10"
tokio = { version = "1.29.1", features = ["full", "tracing", "mio"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-timing = "0.6.0"
